# CS50PYTHON_2023

./: .bumpversion.cfg  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  release.yml  tests.yml
adieu/: adieu.py
bank/: bank.py
bitcoin/: bitcoin.py
camel/: camel.py
coke/: coke.py
deep/: deep.py
einstein/: einstein.py
emojize/: emojize.py
extensions/: extensions.py
figlet/: figlet.py
fuel/: fuel.py
game/: game.py
grocery/: grocery.py
indoor/: indoor.py
jar/: jar.py
lines/: lines.py
meal/: meal.py
numb3rs/: numb3rs.py  test_numb3rs.py
nutrition/: nutrition.py
outdated/: outdated.py
pizza/: pizza.py
plates/: plates.py
professor/: professor.py
response/: response.py
scourgify/: scourgify.py
shirt/: shirt.py
taqueria/: taqueria.py
test_bank/: test_bank.py
test_fuel/: test_fuel.py
test_plates/: test_plates.py
test_twttr/: test_twttr.py
tip/: tip.py
twttr/: twttr.py
um/: um.py
watch/: watch.py
working/: test_working.py  working.py
